--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,8 @@
 <body>
     <div class="main container">
 		<section class="iupload">
-			<h3 class="text-center py-4">Object Classification</h3>
+			<h3 class="text-center py-4">Dog Breed Classification</h3>
+			<h3 class="text-center py-4">Developed by Tinku Hore</h3>
 			<div class="row">
 				<div class="img-part col-md-6">
 					<div class="image-part">
